--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "homepage": "https://github.com/willumz/best-moments-logger#readme",
     "dependencies": {
         "@types/express": "^4.17.13",
+        "body-parser": "^1.20.0",
         "express": "^4.18.1",
         "mariadb": "^3.0.0",
         "moviedb-promise": "^3.1.15",
